--- a/src/MainGuessWho.form
+++ b/src/MainGuessWho.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="MainGuessWho">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="gameBoard" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="1" left="10" bottom="1" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="995" height="525"/>
+      <xy x="20" y="20" width="1002" height="525"/>
     </constraints>
     <properties>
       <background color="-10441283"/>
